Added MySQL integration, submission result storage, DTO security fix, and execution isolation system